gitlab/kubernetes/05-gitlab-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitlab
    app.kubernetes.io/component: gitlab
    app.kubernetes.io/instance: gitlab
  name: gitlab
  namespace: gitlab
spec:
  clusterIP: 172.30.128.136
  clusterIPs:
  - 172.30.128.136
  ports:
  - name: 22-tcp
    port: 22
    protocol: TCP
    targetPort: 22
  - name: 80-tcp
    port: 80
    protocol: TCP
    targetPort: 80
  - name: 443-tcp
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    deployment: gitlab
  sessionAffinity: None
  type: ClusterIP
