gitlab/kubernetes/06-gitlab-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: gitlab
    app.kubernetes.io/component: gitlab
    app.kubernetes.io/instance: gitlab
  name: gitlab
  namespace: gitlab
spec:
  host: gitlab.public.lab.local
  port:
    targetPort: 80
  to:
    kind: Service
    name: gitlab
    weight: 100
  wildcardPolicy: None
